--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "json-schema-form": "^0.0.0",
     "react": "^16.5.2",
     "react-dom": "^16.5.2",
+    "react-router-dom": "^4.3.1",
     "react-scripts": "1.1.5",
     "underscore": "^1.9.1"
   },
